<resources>
    <string name="app_name">TMDb</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="discover">Discover</string>
    <string name="search">Search</string>
    <string name="movies">Movies</string>
    <string name="about">About</string>
    <string name="searchbar_hint">search movies, TV series</string>
    <string name="popular_movies">Popular movies</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming_movies">Coming Soon</string>
    <string name="latest_movies">Latest movies</string>
    <string name="now_playing">Movies in theaters</string>
    <string name="beautiful_animations">Beautiful Animations</string>
    <string name="horror_night">Horror Night</string>
    <string name="tv_series">TV Series</string>
    <string name="popular_series">Popular TV shows</string>
    <string name="latest_series">Latest TV shows</string>
    <string name="top_rated_series">Top rated TV shows</string>
    <string name="tv_airing_today">What\'s on TV today</string>
    <string name="tv_onair">On-air TV shows</string>
    <string name="best_of_2022">The best of 2022</string>
    <string name="movie_not_found">Movie Not Found</string>
    <string name="tv_not_found">Tv Series Not Found</string>
    <string name="search_null_error">Fill this field.</string>
    <string name="search_error">Server error</string>
    <string name="include_adult">Include Adult Content</string>
    <string name="directors">Director(s)</string>
    <string name="producers">Producer(s)</string>
    <string name="cast">Cast</string>
    <string name="trailer">Trailer(s)</string>
    <string name="creator">Creator(s)</string>
    <string name="seasons">Season(s)</string>
    <string name="season">&#160;Season</string>
    <string name="episodes">&#160;Episodes</string>
    <string name="minute">&#160;minutes</string>


    <string name="popularity_asc">Popularity (Ascending)</string>
    <string name="popularity_desc">Popularity (Descending)</string>
    <string name="revenue_desc">Revenue (Descending)</string>
    <string name="release_date_asc">Release Date (Ascending)</string>
    <string name="release_date_desc">Release Date (Descending)</string>
    <string name="vote_average_asc">Vote Average (Ascending)</string>
    <string name="vote_average_desc">Vote Average (Descending)</string>
    <string name="vote_count_desc">Vote Count (Descending)</string>

    <array name="spinner_array">

        <item>@string/popularity_desc</item>
        <item>@string/popularity_asc</item>
        <item>@string/revenue_desc</item>
        <item>@string/release_date_desc</item>
        <item>@string/release_date_asc</item>
        <item>@string/vote_average_desc</item>
        <item>@string/vote_average_asc</item>
        <item>@string/vote_count_desc</item>

    </array>


</resources>