<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DetailsFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Godfather"
                android:textSize="22sp"
                android:textStyle="bold">

            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/name_text">

            </ImageView>

            <TextView
                android:id="@+id/genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="Drama"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/year_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/genre_text"
                android:text="1972"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/duration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/year_text"
                android:text="2 hours, 10 minutes"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:id="@+id/overviewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/genre_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text=""
                android:textSize="20sp">

            </TextView>

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/overviewText"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:isIndicator="true"
                android:numStars="10"
                android:stepSize="0.5">

            </RatingBar>

            <TextView
                android:id="@+id/vote_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/overviewText"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/ratingBar"
                android:text="5/10"
                android:textSize="12sp">

            </TextView>

            <LinearLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ratingBar"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/directors"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/producers"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recyclerViews_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleLayout"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/directorRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/producerRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <TextView
                android:id="@+id/cast_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recyclerViews_layout"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/cast"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/castRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cast_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/trailer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/castRecyclerView"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/trailer"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trailerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/trailer_text"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp">

            </androidx.recyclerview.widget.RecyclerView>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>